--- a/_navbar.yml
+++ b/_navbar.yml
@@ -1,7 +1,8 @@
+# NB: These are subheadings of 'navbar' 
+
 title: "GWAS tutorial"
 
-navbar:
-  left:
+left:
     - icon: fa-home fa-lg
       href: index.html
     - text: "Data information & quality control"
